src/test/ui/unsized-locals/unsized-local-pat.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized-local-pat.rs:5:15
   |
LL | fn f1(box box _b: Box<Box<[u8]>>) {}
   |               ^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature

error[E0277]: the size for values of type `[i32]` cannot be known at compilation time
  --> $DIR/unsized-local-pat.rs:8:12
   |
LL | fn f2((_x, _y): (i32, [i32])) {}
   |            ^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[i32]`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
